@@ -1,7 +1,8 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.1'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	//id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.backend'
@@ -36,10 +37,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
 	//웹 크롤링
 	implementation 'org.seleniumhq.selenium:selenium-java:4.8.0'
@@ -52,4 +54,30 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+// CI/CD 하면서 추가
+def querydslDir = "src/main/generated"
+
+sourceSets {
+	main.java.srcDirs += [ querydslDir ]
+}
+
+tasks.withType(JavaCompile) {
+	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+}
+
+clean.doLast {
+	file(querydslDir).deleteDir()
+}
+
+clean {
+	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
+}
+tasks.withType(JavaCompile) {
+	options.compilerArgs += [
+			'--add-opens',
+			'java.base/java.lang=ALL-UNNAMED',
+			'--add-opens',
+			'java.base/java.util=ALL-UNNAMED'
+	]
 }
